testbed/test/cruise/compiler/expected/After_Custom.txt
After_Custom.ump:7: error: cannot find symbol
            b = a;
            ^
  symbol:   variable b
  location: class AfterCustom
1 error